--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <title>Crypto</title>
+    <title>Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
